testsuite/tests/parser/should_fail/T17162.stderr

T17162.hs:6:21: error:
    Illegal bang-pattern (use BangPatterns):
    !enc
